--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <header id="cabecalho">
         <div class="logo">
-            <a href="#container"><img src="svg/logo.svg" alt=""></a>
+            <a href="javascript:void(0);" onclick="scrollToSection('container')"><img src="svg/logo.svg" alt=""></a>
         </div>
         <div class="esquerda">
             <nav class="desktop">
