--- a/index.html
+++ b/index.html
@@ -117,27 +117,27 @@
         <h1>Nossos <b>Serviços</b></h1>
         <div class="cards" >
             
-            <div class="card"   data-aos="fade-right" data-aos-duration="3000">
+            <div class="card"   data-aos="fade-down" data-aos-duration="3000">
                 <img src="img/carroParticular.png" alt="">
                 <h1>Particular</h1>
                 <p>Oferecendo qualidade sem comprometer o bolso preço justo para todos.</p>
             </div>
-            <div class="card"  data-aos="fade-right" data-aos-duration="3000">
+            <div class="card"  data-aos="fade-down" data-aos-duration="3000">
                 <img src="img/carroMulher.png">
                 <h1>Mulher</h1>
                 <p>Empoderando cada jornada, Mooby Mulher garante segurança e conforto para todas as viagens.</p>
             </div>
-            <div class="card"  data-aos="fade-right" data-aos-duration="2000">
+            <div class="card"  data-aos="fade-down" data-aos-duration="2000">
                 <img src="img/logoMotoTaxi.png" alt="">
                 <h1>MotoTaxi</h1>
                 <p>Velocidade, praticidade e confiança Mooby Moto, a solução ágil para os desafios urbanos.</p>
             </div>
-            <div class="card"  data-aos="fade-right" data-aos-duration="2000">
+            <div class="card"  data-aos="fade-down" data-aos-duration="2000">
                 <img src="img/logoEntrega.png" alt="">
                 <h1>Entrega</h1>
                 <p>Entregas rápidas, confiáveis e eficientes Mooby Entregas, o parceiro perfeito para o seu negócio decolar!</p>
             </div>
-            <div class="card"  data-aos="fade-right" data-aos-duration="3000">
+            <div class="card"  data-aos="fade-down" data-aos-duration="3000">
                 <img src="svg/imagemCompra.svg" alt="" width="100px" height="100px">
                 <h1>Mercado</h1>
                 <p>O motorista transforma o mercado em ponto de partida, guiando os passageiros até o destino desejado!</p>
@@ -153,7 +153,7 @@
         </div>
         <div class="containerMotorista">
         <div class="informacoesMotorista">
-            <div class="imagemMotorista" data-aos="fade-right" data-aos-duration="1000">
+            <div class="imagemMotorista" data-aos="fade-right" data-aos-duration="3000">
                 <img src="svg/cll.svg" alt="">
             </div>
             <div class="celularMotorista">
@@ -242,20 +242,20 @@
             <main>
                   <div class="left">
                     <div class="areaCards">
-                        <div class="passageiroCard" data-aos="fade-up-left">
+                        <div class="passageiroCard" data-aos="fade-up-right">
                             <img src="svg/person_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h1>Motoristas Qualificados</h1>
                             <p>Todos motoristas passam por uma analise criteriosa de dados além de serem treinados antes da liberação do cadastro no aplicativo.
                             </p>
                         </div>
-                        <div class="passageiroCard" data-aos="fade-up-left" data-aos-duration="500">
+                        <div class="passageiroCard" data-aos="fade-up-right" data-aos-duration="500">
                             <img src="svg/lock_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h1>Botão de Panico</h1>
                             <p>Aqui na TOP, quando um passageiro aciona o Botão de Pânico, a Central de Atendimento comunica a Policia e faz o acompanhamento da viagem em tempo real. 
 
                             </p>
                         </div>
-                        <div class="passageiroCard" data-aos="fade-up-left">
+                        <div class="passageiroCard" data-aos="fade-up-right">
                             <img src="svg/currency_exchange_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h1>Varias Opções de Pagamento
                             </h1>
@@ -263,7 +263,7 @@
 
                             </p>
                         </div>
-                        <div class="passageiroCard" data-aos="fade-up-left">
+                        <div class="passageiroCard" data-aos="fade-up-right">
                             <img src="svg/local_activity_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h1>Muito mais Descontos
                             </h1>
@@ -271,7 +271,7 @@
 
                             </p>
                         </div>
-                        <div class="passageiroCard" data-aos="fade-up-left">
+                        <div class="passageiroCard" data-aos="fade-up-right">
                             <img src="svg/monitoring_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h1>Sem Tarifa Dinâmica Abusiva
                             </h1>
@@ -279,7 +279,7 @@
 
                             </p>
                         </div>
-                        <div class="passageiroCard" data-aos="fade-up-left">
+                        <div class="passageiroCard" data-aos="fade-up-right">
                             <img src="svg/savings_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h1>Os Melhores Preços
                             </h1>
@@ -290,8 +290,8 @@
                 </div>
 
             </div>
-                <div class="right">
-                    <div class="img" data-aos="fade-right" data-aos-duration="1000">
+                <div class="right" data-aos="fade-right">
+                    <div class="img">
                         <img src="svg/image-removebg-preview (1).svg" alt=""></div>
                     <div class="botoes" id="downloadTop">
             
