--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <h1>Nossos <b>Serviços</b></h1>
         <div class="cards" >
             
-            <div class="card"   data-aos="fade-down" data-aos-duration="3000">
-                <img src="img/carroParticular.png" alt="">
+            <div class="card"  class="diferente" data-aos="fade-down" data-aos-duration="3000">
+                <img src="img/carroParticular.png" alt="" >
                 <h1>Particular</h1>
                 <p>Oferecendo qualidade sem comprometer o bolso preço justo para todos.</p>
             </div>
@@ -142,7 +142,13 @@
                 <h1>Mercado</h1>
                 <p>O motorista transforma o mercado em ponto de partida, guiando os passageiros até o destino desejado!</p>
             </div>
-            
+            <div class="card"  class="diferente" data-aos="fade-down" data-aos-duration="3000" style="
+            margin-bottom: 25px;
+        ">
+                <img src="img/carro.png" alt="" class="diferente" style="width: 100px;">
+                <h1>Classe Econômica</h1>
+                <p>Viagens econômicas com veículos acessíveis e seguros, ideais para deslocamentos diários. </p>
+            </div>
         </div>
     </div>
 
